--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,9 @@ dependencies:
   get: ^4.6.6
   permission_handler: ^11.2.0
   image: ^4.1.4
-  tflite_flutter: ^0.10.4
-#  tensorflow_lite_flutter: ^2.0.1
+#  tflite_flutter: ^0.10.4
+  tensorflow_lite_flutter: ^2.0.1
+  pytorch_lite: ^4.2.4
 #  tflite_v2: ^1.0.0
 
 dev_dependencies:
